carousel collapse web fix

--- a/sfa/_sass/_pwc.scss
+++ b/sfa/_sass/_pwc.scss
@@ -89,6 +89,11 @@
 	h2{
 		padding: 30px 20px;
 	}
+
+	a {
+		color: #fff;
+		text-decoration: underline;
+	}
 	/*.bg-dark-trans {
 		background: rgba(0, 0, 0, 0.7);
 	}*/
